{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 21,
  "lineage": "004094cb-911c-183c-3d9a-a1756775899d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0078cd8e3b6f5af1c",
            "id": "rtb-0078cd8e3b6f5af1c",
            "owner_id": "777994583330",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0571b44744d74421a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "digitalid-lgcc"
            },
            "vpc_id": "vpc-0f050d8c9dead331a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "console",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0703d2de883170053",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 384,
                "throughput": 0,
                "volume_id": "vol-051fe5ea5c28540b7",
                "volume_size": 128,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0703d2de883170053",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f3938f6c222b74b",
            "private_dns": "ip-10-20-20-10.ap-south-1.compute.internal",
            "private_ip": "10.20.20.10",
            "public_dns": "ec2-13-127-255-199.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.255.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-06dc74c3d2567e509",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "console.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00fb9d50ca3cd675d"
            ]
          },
          "dependencies": [
            "aws_security_group.console",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dmzmaster.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-09cc175b36bc9e604",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cc175b36bc9e604",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0832b18d9dd33da1e",
            "private_dns": "ip-10-20-20-199.ap-south-1.compute.internal",
            "private_ip": "10.20.20.199",
            "public_dns": "ec2-13-232-184-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.184.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00bfe498bcd1cd537",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "dmzmaster.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "dmzworker0.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-05009dffe2ae936bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05009dffe2ae936bd",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f535f51aeebac968",
            "private_dns": "ip-10-20-20-200.ap-south-1.compute.internal",
            "private_ip": "10.20.20.200",
            "public_dns": "ec2-13-233-190-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.190.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00dbd65b3fe327cc0",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "dmzworker0.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzmaster.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-074db1bd05bbd5344",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074db1bd05bbd5344",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4d51ac594c376da",
            "private_dns": "ip-10-20-20-99.ap-south-1.compute.internal",
            "private_ip": "10.20.20.99",
            "public_dns": "ec2-3-6-93-40.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.93.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-003755eed90c0b7ca",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzmaster.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker0.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0ba1e53e6a9220719",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba1e53e6a9220719",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0acbecf7c58840395",
            "private_dns": "ip-10-20-20-100.ap-south-1.compute.internal",
            "private_ip": "10.20.20.100",
            "public_dns": "ec2-13-127-252-72.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.252.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b9552c67ef56a503",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker0.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker1.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-013622995077eb513",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013622995077eb513",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0abf63cbe4e443d5a",
            "private_dns": "ip-10-20-20-101.ap-south-1.compute.internal",
            "private_ip": "10.20.20.101",
            "public_dns": "ec2-13-127-13-190.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.13.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-03bcf76a232e67a49",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker1.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker2.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0be2210051b05fe3a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be2210051b05fe3a",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0eb3ca1cf4ec199",
            "private_dns": "ip-10-20-20-102.ap-south-1.compute.internal",
            "private_ip": "10.20.20.102",
            "public_dns": "ec2-13-235-24-30.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.24.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01230c4e68cee2b44",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker2.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker3.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-08a1ca94acbe24bd5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a1ca94acbe24bd5",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01718d2f4e477a1a1",
            "private_dns": "ip-10-20-20-103.ap-south-1.compute.internal",
            "private_ip": "10.20.20.103",
            "public_dns": "ec2-35-154-12-112.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.12.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-04c98dae2922673a6",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker3.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker4.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-08a052eb29dc3d63a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a052eb29dc3d63a",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0223d66a1aa71211b",
            "private_dns": "ip-10-20-20-104.ap-south-1.compute.internal",
            "private_ip": "10.20.20.104",
            "public_dns": "ec2-13-235-9-57.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.9.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0952855d5776e4e04",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker4.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker5.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0b807d38a43cc5442",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b807d38a43cc5442",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0634152c647ab536a",
            "private_dns": "ip-10-20-20-105.ap-south-1.compute.internal",
            "private_ip": "10.20.20.105",
            "public_dns": "ec2-13-233-130-84.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.130.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0479ef9a639ede87c",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker5.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker6.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0b142703af068d2e1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b142703af068d2e1",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0486460e66ed00ecf",
            "private_dns": "ip-10-20-20-106.ap-south-1.compute.internal",
            "private_ip": "10.20.20.106",
            "public_dns": "ec2-13-127-159-188.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.159.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b1c7bc4e28e79e02",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker6.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker7.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0ee51432db4dcd1d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee51432db4dcd1d9",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0627cae610616da55",
            "private_dns": "ip-10-20-20-107.ap-south-1.compute.internal",
            "private_ip": "10.20.20.107",
            "public_dns": "ec2-13-126-236-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.236.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09d160940caf7596a",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker7.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        },
        {
          "index_key": "mzworker8.sb",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd861ee19fd50a16",
            "arn": "arn:aws:ec2:ap-south-1:777994583330:instance/i-0be5a4a9e9629a4aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be5a4a9e9629a4aa",
            "instance_state": "running",
            "instance_type": "m5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "mossip-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbebb086c8a5c855",
            "private_dns": "ip-10-20-20-108.ap-south-1.compute.internal",
            "private_ip": "10.20.20.108",
            "public_dns": "ec2-13-233-161-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.161.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0eee093ccec082ca5",
                "volume_size": 24,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0008e3ce2b32afb54",
            "tags": {
              "Name": "mzworker8.sb",
              "component": "digitalid-lgcc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0422d11f2b1d0cc95"
            ]
          },
          "dependencies": [
            "aws_security_group.kube",
            "aws_subnet.private",
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777994583330:internet-gateway/igw-0571b44744d74421a",
            "id": "igw-0571b44744d74421a",
            "owner_id": "777994583330",
            "tags": {
              "Name": "digitalid-lgcc_gw"
            },
            "vpc_id": "vpc-0f050d8c9dead331a"
          },
          "dependencies": [
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "console",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777994583330:security-group/sg-00fb9d50ca3cd675d",
            "description": "Rules for console",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fb9d50ca3cd675d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30616,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30616
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "console",
            "name_prefix": "",
            "owner_id": "777994583330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "console"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f050d8c9dead331a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777994583330:security-group/sg-0422d11f2b1d0cc95",
            "description": "Rules for all kube machines",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0422d11f2b1d0cc95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kube",
            "name_prefix": "",
            "owner_id": "777994583330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f050d8c9dead331a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777994583330:subnet/subnet-0008e3ce2b32afb54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.20.0/24",
            "id": "subnet-0008e3ce2b32afb54",
            "map_public_ip_on_launch": true,
            "owner_id": "777994583330",
            "vpc_id": "vpc-0f050d8c9dead331a"
          },
          "dependencies": [
            "aws_vpc.sandbox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sandbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:777994583330:vpc/vpc-0f050d8c9dead331a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0f8297a8edd6488a0",
            "default_route_table_id": "rtb-0078cd8e3b6f5af1c",
            "default_security_group_id": "sg-01c5ca1db7197609d",
            "dhcp_options_id": "dopt-b9e33cd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f050d8c9dead331a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0078cd8e3b6f5af1c",
            "owner_id": "777994583330",
            "tags": {
              "Name": "digitalid-lgcc"
            }
          }
        }
      ]
    }
  ]
}